Contrast fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -109,6 +109,7 @@ aside {
 
 
 .edit {
+    background-color: #4B525A;
     display: inline-block;
 }
 
@@ -225,6 +226,7 @@ code {
 
 
 .scroll {
+    background-color: #4B525A;
     display: inline-block;
     margin: 1rem 0 2rem;
 }
